--- a/apps/frontend/account.html
+++ b/apps/frontend/account.html
@@ -175,7 +175,7 @@
             <!-- Login Form -->
             <div id="loginForm" class="auth-form active">
                 <h2>Đăng nhập</h2>
-                <form id="loginFormElement" onsubmit="handleLogin(event)">
+                <form id="loginFormElement" onsubmit="handleLogin(event)" novalidate>
                     <div class="form-group">
                         <label>Email</label>
                         <div class="input-wrapper">
@@ -203,7 +203,7 @@
             <!-- Register Form -->
             <div id="registerForm" class="auth-form">
                 <h2>Đăng ký</h2>
-                <form id="registerFormElement" onsubmit="handleRegister(event)">
+                <form id="registerFormElement" onsubmit="handleRegister(event)" novalidate>
                     <div class="form-group">
                         <label>Họ và tên</label>
                         <div class="input-wrapper">
@@ -256,7 +256,7 @@
             <h2>Hủy đơn hàng</h2>
             <p>Vui lòng chọn lý do hủy đơn hàng:</p>
 
-            <form id="cancelOrderForm" onsubmit="submitCancelOrder(event)">
+            <form id="cancelOrderForm" onsubmit="submitCancelOrder(event)" novalidate>
                 <div class="form-group">
                     <label>
                         <input type="radio" name="cancelReason" value="Đổi ý, không muốn mua nữa" checked>
