--- a/apps/frontend/checkout.html
+++ b/apps/frontend/checkout.html
@@ -114,7 +114,7 @@
                     </div>
                     
                     <!-- New Address Form -->
-                    <form id="checkoutForm" onsubmit="submitCheckout(event)">
+                    <form id="checkoutForm" onsubmit="submitCheckout(event)" novalidate>
                         <div id="newAddressForm" style="display: none;">
                             <div class="form-group">
                                 <label>Họ và tên</label>
@@ -240,7 +240,7 @@
             <!-- Login Form -->
             <div id="loginForm" class="auth-form active">
                 <h2>Đăng nhập</h2>
-                <form id="loginFormElement" onsubmit="handleLogin(event)">
+                <form id="loginFormElement" onsubmit="handleLogin(event)" novalidate>
                     <div class="form-group">
                         <label>Email</label>
                         <div class="input-wrapper">
@@ -268,7 +268,7 @@
             <!-- Register Form -->
             <div id="registerForm" class="auth-form">
                 <h2>Đăng ký</h2>
-                <form id="registerFormElement" onsubmit="handleRegister(event)">
+                <form id="registerFormElement" onsubmit="handleRegister(event)" novalidate>
                     <div class="form-group">
                         <label>Họ và tên</label>
                         <div class="input-wrapper">
