--- a/apps/frontend/index.html
+++ b/apps/frontend/index.html
@@ -197,65 +197,6 @@
     </section>
 
     <!-- Product Modal -->
-                <div class="help-topic-header">
-                    <div class="help-topic-header-icon">🛒</div>
-                    <h2>Đặt hàng & Thanh toán</h2>
-                </div>
-                
-                <div class="help-topic-section">
-                    <h3>Cách đặt hàng</h3>
-                    <ol class="help-step-list">
-                        <li><strong>Tìm kiếm sản phẩm:</strong> Sử dụng thanh tìm kiếm hoặc duyệt qua các danh mục sản phẩm</li>
-                        <li><strong>Xem chi tiết:</strong> Click vào sản phẩm để xem thông tin chi tiết, hình ảnh và mô tả</li>
-                        <li><strong>Chọn size và số lượng:</strong> Chọn size phù hợp và số lượng bạn muốn mua</li>
-                        <li><strong>Thêm vào giỏ hàng:</strong> Nhấn nút "Thêm vào giỏ" để thêm sản phẩm vào giỏ hàng</li>
-                        <li><strong>Kiểm tra giỏ hàng:</strong> Click vào biểu tượng "Giỏ hàng" ở header để xem các sản phẩm đã chọn</li>
-                        <li><strong>Thanh toán:</strong> Nhấn nút "Thanh toán" và điền đầy đủ thông tin giao hàng</li>
-                        <li><strong>Xác nhận đơn hàng:</strong> Kiểm tra lại thông tin và nhấn "Xác nhận đơn hàng"</li>
-                    </ol>
-                </div>
-
-                <div class="help-topic-section">
-                    <h3>Phương thức thanh toán</h3>
-                    <div class="help-payment-methods">
-                        <div class="payment-method-card">
-                            <div class="payment-icon">💵</div>
-                            <h4>Thanh toán khi nhận hàng (COD)</h4>
-                            <p>Thanh toán bằng tiền mặt khi nhận được hàng. Phí thu hộ: 20.000₫</p>
-                        </div>
-                        <div class="payment-method-card">
-                            <div class="payment-icon">🏦</div>
-                            <h4>Chuyển khoản ngân hàng</h4>
-                            <p>Chuyển khoản trực tiếp đến tài khoản ngân hàng. Thông tin tài khoản sẽ được gửi qua email sau khi đặt hàng.</p>
-                        </div>
-                        <div class="payment-method-card">
-                            <div class="payment-icon">💳</div>
-                            <h4>Thẻ tín dụng / Ghi nợ</h4>
-                            <p>Thanh toán bằng thẻ Visa, Mastercard hoặc các loại thẻ ngân hàng khác qua cổng thanh toán an toàn.</p>
-                        </div>
-                        <div class="payment-method-card">
-                            <div class="payment-icon">📱</div>
-                            <h4>Ví điện tử</h4>
-                            <p>Thanh toán qua MoMo, ZaloPay, VNPay và các ví điện tử khác.</p>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="help-topic-section">
-                    <h3>Lưu ý khi đặt hàng</h3>
-                    <ul class="help-note-list">
-                        <li>Bạn cần đăng nhập để có thể đặt hàng và theo dõi đơn hàng</li>
-                        <li>Vui lòng kiểm tra kỹ thông tin địa chỉ giao hàng trước khi xác nhận</li>
-                        <li>Đơn hàng sẽ được xử lý trong vòng 24 giờ kể từ khi đặt</li>
-                        <li>Bạn sẽ nhận được email xác nhận đơn hàng sau khi đặt thành công</li>
-                        <li>Mọi thắc mắc về đơn hàng, vui lòng liên hệ hotline: 1900 1234</li>
-                    </ul>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <!-- Product Modal -->
     <div id="productModal" class="modal product-modal">
         <div class="modal-content product-modal-content">
             <span class="close">&times;</span>
@@ -312,7 +253,7 @@
             <!-- Login Form -->
             <div id="loginForm" class="auth-form active">
                 <h2>Đăng nhập</h2>
-                <form id="loginFormElement" onsubmit="handleLogin(event)">
+                <form id="loginFormElement" onsubmit="handleLogin(event)" novalidate>
                     <div class="form-group">
                         <label>Email</label>
                         <div class="input-wrapper">
@@ -340,7 +281,7 @@
             <!-- Register Form -->
             <div id="registerForm" class="auth-form">
                 <h2>Đăng ký</h2>
-                <form id="registerFormElement" onsubmit="handleRegister(event)">
+                <form id="registerFormElement" onsubmit="handleRegister(event)" novalidate>
                     <div class="form-group">
                         <label>Họ và tên</label>
                         <div class="input-wrapper">
