--- a/apps/frontend/order-confirmation.html
+++ b/apps/frontend/order-confirmation.html
@@ -163,7 +163,7 @@
             <!-- Login Form -->
             <div id="loginForm" class="auth-form active">
                 <h2>Đăng nhập</h2>
-                <form id="loginFormElement" onsubmit="handleLogin(event)">
+                <form id="loginFormElement" onsubmit="handleLogin(event)" novalidate>
                     <div class="form-group">
                         <label>Email</label>
                         <div class="input-wrapper">
@@ -191,7 +191,7 @@
             <!-- Register Form -->
             <div id="registerForm" class="auth-form">
                 <h2>Đăng ký</h2>
-                <form id="registerFormElement" onsubmit="handleRegister(event)">
+                <form id="registerFormElement" onsubmit="handleRegister(event)" novalidate>
                     <div class="form-group">
                         <label>Họ và tên</label>
                         <div class="input-wrapper">
